@@ -1,0 +1,14 @@
+package edu.colorado.phet.fluidpressureandflow;
+
+import edu.colorado.phet.common.phetcommon.resources.PhetResources;
+
+/**
+ * @author Sam Reid
+ */
+public class FluidPressureAndFlowResources extends PhetResources {
+    public FluidPressureAndFlowResources() {
+        super( "fluid-pressure-and-flow" );
+    }
+
+    public static FluidPressureAndFlowResources RESOURCES = new FluidPressureAndFlowResources();
+}
