@@ -1,11 +1,7 @@
 package edu.colorado.phet.fluidpressureandflow.modules.fluidflow;
 
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
-
-import javax.swing.*;
 
 import edu.colorado.phet.common.phetcommon.util.Function0;
 import edu.colorado.phet.common.phetcommon.util.Function1;
@@ -15,7 +11,6 @@ import edu.colorado.phet.fluidpressureandflow.model.Pool;
 import edu.colorado.phet.fluidpressureandflow.model.PressureSensor;
 import edu.colorado.phet.fluidpressureandflow.view.*;
 import edu.umd.cs.piccolo.PNode;
-import edu.umd.cs.piccolox.pswing.PSwing;
 
 /**
  * @author Sam Reid
@@ -54,16 +49,14 @@ public class FluidFlowCanvas extends FluidPressureAndFlowCanvas {
         }
         addChild( new VelocitySensorNode( transform, module.getFluidFlowModel().getVelocitySensor() ) );
 
-        final DropperNode dropperNode = new DropperNode( transform, module.getFluidFlowModel().getPipe(), module.getFluidFlowModel().getDropperOnProperty() );
+        final DropperNode dropperNode = new DropperNode( transform, module.getFluidFlowModel().getPipe(), module.getFluidFlowModel().getDropperOnProperty(), new SimpleObserver() {
+            public void update() {
+                module.getFluidFlowModel().addDrop();
+            }
+        } );
         addChild( dropperNode );
-        addChild( new PSwing( new JButton( "Pour Food Coloring" ) {{
-            addActionListener( new ActionListener() {
-                public void actionPerformed( ActionEvent e ) {
-                    module.getFluidFlowModel().pourFoodColoring();
-                }
-            } );
-        }} ) {{
-            setOffset( dropperNode.getFullBounds().getMaxX(), dropperNode.getFullBounds().getMaxY() - getFullBounds().getHeight() );
+        addChild( new BucketNode( module ) {{
+            setOffset( dropperNode.getFullBounds().getMaxX() + 5, dropperNode.getFullBounds().getMaxY() - getFullBounds().getHeight() );
         }} );
 
         module.getFluidFlowModel().addFoodColoringObserver( new Function1<FoodColoring, Void>() {
